--- a/Site Web/styles/main.scss
+++ b/Site Web/styles/main.scss
@@ -1,147 +1,150 @@
 @import "reset.scss";
 
+// --- Variables ---
+// Colors
+$body-gradient: linear-gradient(to bottom right, #84fab0, #8fd3f4);
+$shadow-div: 0px 3px 6px rgba(0, 0, 0, .15);
+$shadow-input: 0px 3px 6px rgba(0, 0, 0, .15);
+$shadow-btn: 0px 3px 6px rgba(0, 0, 0, .15);
+$text-color: #353B48;
+$placeholder-color: rgba(112, 112, 122, .5);
+$hr-color: #353B48;
+$icon-color: #353B48;
+$red-bin-color: #E74C3C;
+$btn-bg-color: #84fab0;
+$form-bg-color: rgba(255, 255, 255, .35);
+
+// Font-family & size
+$main-font: "Montserrat", sans-serif;
+$form-title-size: 2em;
+$form-input-size: 1.1em;
+
+// Elements size 
+$logo-height: 80px;
+$logo-width: 150px;
+$input-height: 45px;
+$input-width: 450px;
+$input-radius: 7px;
+$btn-height: 40px;
+$btn-width: 180px;
+$btn-radius: 7px;
+
+
+// --- STYLES ---
 html,
 body {
-    width: 100%;
-    font-family: "Montserrat", sans-serif;
-    background: linear-gradient(to bottom right, #84fab0, #8fd3f4);
-    background-repeat: no-repeat;
+    background: $body-gradient;
     background-attachment: fixed;
+    background-repeat: no-repeat;
+    font-family: $main-font;
     scroll-behavior: smooth;
+    width: 100%;
 
     // ---------------------------------------
     // Login Page Styles
-    .index-div-logo {
-        margin: 20px 0 0 20px;
+    .div-logo {
         background: black;
-        width: 150px;
-        height: 80px;
+        height: $logo-height;
+        margin: 20px 0 0 20px;
+        width: $logo-width;
     }
 
     .index-div-connexion {
+        border-radius: 15px;
+        box-shadow: $shadow-div;
         display: flex;
         justify-content: center;
+        font-family: $main-font;
+        margin: 100px auto;
+        width: 600px;
 
-        .index-connexion {
+        .index-form {
             display: flex;
             align-items: center;
             flex-direction: column;
-            margin-top: 20px;
-            background: rgba(255, 255, 255, 0.3);
+            background-color: $form-bg-color;
+            border: none;
             border-radius: 15px;
-            width: 600px;
-            height: 400px;
+            font-size: 1.1em;
+            margin: 0 auto;
+            width: 100%;
 
-            .index-title-connexion {
-                font-size: 2.5rem;
-                margin-top: 30px;
-                height: 80px;
-                color: #353b48;
-            }
-
-            .index-border {
-                width: 150px;
-                border-top: solid 2px #353b48;
+            .index-title {
+                color: $text-color;
+                font-size: $form-title-size;
+                font-weight: bold;
+                margin: 35px 0px;
+                text-align: center;
             }
 
-            .index-email{
-                margin-top: 45px;
-                width: 70%;
-                display: flex;
-                flex-direction: row;
-                justify-content: center; 
-                align-items: center;
-                box-shadow: 0px 3px 6px  rgba(0, 0, 0, 0.4);
-                border-radius: 10px;
-                border-bottom-left-radius: 10px;
-                .index-icon-mail{
-                    background: white;
-                    height: 42px;
-                    display: flex;
-                    align-items: center;
-                    padding-left: 15px;
-                    border-top-left-radius: 10px;
-                    border-bottom-left-radius: 10px;
-                }
-                input{
-                    width: 100%;
-                    height: 40px;
-                    border: none;
-                    padding-left: 15px;
-                    border-top-right-radius: 10px;
-                    border-bottom-right-radius: 10px;
-                    outline: none;
-                    &::placeholder{
-                        color: grey;
-                    }
-                    
+            .index-separation-form {
+                color: $hr-color;
+                margin-bottom: 35px;
+                width: 50%;
+            }
+
+            i {
+                background-color: white;
+                border-radius: $input-radius 0px 0px $input-radius;
+                color: $icon-color;
+                font-size: 1.6em;
+                line-height: 45px;
+                padding: 0px 15px;
+                position: absolute;
+            }
+
+            input[type="email"],
+            input[type="password"] {
+                border: none;
+                border-radius: $input-radius;
+                box-shadow: $shadow-input;
+                font-family: $main-font;
+                font-size: 1.05em;
+                height: $input-height;
+                margin-bottom: 20px;
+                outline: none;
+                padding: 0px 15px;
+                resize: none;
+                text-indent: 45px;
+                width: $input-width;
+
+                &::placeholder {
+                    color: $placeholder-color;
+                    font-family: $main-font;
+                    font-size: 1.1em;
+                    letter-spacing: 2px;
                 }
             }
-            .index-password{
-                margin-top: 25px;
-                width: 70%;
-                display: flex;
-                flex-direction: row;
-                justify-content: center; 
-                align-items: center;
-                box-shadow: 0px 3px 6px  rgba(0, 0, 0, 0.4);
-                border-radius: 10px;
-                .index-icon-password{
-                    background: white;
-                    height: 42px;
-                    display: flex;
-                    align-items: center;
-                    padding-left: 15px;
-                    border-top-left-radius: 10px;
-                    border-bottom-left-radius: 10px;   
-                }
-                input{
-                    width: 100%;
-                    height: 40px;
-                    border: none;
-                    padding-left: 15px;
-                    border-top-right-radius: 10px;
-                    border-bottom-right-radius: 10px;
-                    outline: none;
-                    &::placeholder{
-                        color: grey;
-                    }
-                }
-            }
-            .index-button{
-                margin-top: 25px;
-                display: flex;
-                justify-content: flex-end;
-                margin-right: 21%;
-                width: 100%;
-                input{
-                    padding: 10px 20px;
-                    color: #353B48;
-                    background: #84FAB0;
-                    border: none;
-                    border-radius: 10px;
-                    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4);
-                    outline: none;
-                }
+
+            button[type="submit"] {
+                background-color: $btn-bg-color;
+                border: none;
+                border-radius: $btn-radius;
+                box-shadow: $shadow-btn;
+                color: $text-color;
+                cursor: pointer;
+                font-family: $main-font;
+                font-size: 1em;
+                font-weight: bold;
+                height: $btn-height;
+                letter-spacing: 1.5px;
+                margin-bottom: 30px;
+                margin-top: 20px;
+                width: $btn-width;
             }
         }
     }
 
     // ---------------------------------------
     // List Page Styles
-    .list-div-logo {
-        margin: 20px 0 0 20px;
-        background: black;
-        width: 150px;
-        height: 80px;
-    }
-
+    
     .list-title-container {
         display: flex;
         justify-content: center;
 
         .list-title {
-            color: #353B48;
+            color: $text-color;
+            font-family: $main-font;
             font-size: 40px;
             margin-bottom: 50px;
             margin-top: 15px;
@@ -149,25 +152,25 @@ body {
     }
 
     .list-cards {
+        align-items: center;
         display: flex;
         flex-direction: column;
-        align-items: center;
 
         .list-card {
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: $shadow-div;
             display: flex;
             flex-direction: column;
-            background-color: white;
-            width: 50%;
-            border-radius: 10px;
-            padding: 15px;
             margin: 15px;
-            box-shadow: 0px 3px 6px rgba(0, 0, 0, .4);
+            padding: 15px;
+            width: 50%;
 
             .list-card-line1 {
+                color: $text-color;
                 display: flex;
                 justify-content: space-between;
                 margin: 10px;
-                color: #353B48;
 
                 p {
                     margin: 0px 10px 5px 0px;
@@ -179,7 +182,7 @@ body {
                 }
 
                 a {
-                    color: #353B48;
+                    color: $text-color;
                     transition: all .1s ease-in-out;
 
                     &:hover {
@@ -196,7 +199,7 @@ body {
                 display: flex;
                 justify-content: flex-start;
                 margin: 10px;
-                color: #353B48;
+                color: $text-color;
 
                 p {
                     font-size: 20px;
@@ -210,7 +213,7 @@ body {
                 color: #353B48;
 
                 .bin {
-                    color: #E74C3C;
+                    color: $red-bin-color;
                     font-size: 30px;
                     transition: all .1s ease-in-out;
 
@@ -227,20 +230,20 @@ body {
         color: #353B48;
 
         .list-add-div {
+            align-items: center;
             background-color: white;
-            padding: 10px;
             border-radius: 50%;
-            width: 60px;
-            height: 60px;
+            bottom: 10px;
             box-shadow: 0px 3px 6px rgba(0, 0, 0, .4);
             display: flex;
+            height: 60px;
             justify-content: center;
-            align-items: center;
-            margin: 10px;
-            position: fixed;
-            bottom: 10px;
             left: 10px;
+            margin: 10px;
+            padding: 10px;
+            position: fixed;
             transition: all .1s ease-in-out;
+            width: 60px;
 
             &:hover {
                 box-shadow: 0px 3px 6px rgba(0, 0, 0, .6);
@@ -261,7 +264,7 @@ body {
     // ---------------------------------------
     // Adding Page Styles
     a.back {
-        color: #353B48;
+        color: $text-color;
         position: absolute;
         text-align: center;
         text-decoration: none;
@@ -280,7 +283,7 @@ body {
         &:hover {
             background: rgba(255, 255, 255, 0.3);
             border-radius: 5px;
-            box-shadow: 0px 3px 6px rgba(0, 0, 0, .15);            
+            box-shadow: $shadow-div;            
         }
 
         p {
@@ -296,10 +299,10 @@ body {
 
     .add-div-connexion {
         border-radius: 15px;
-        box-shadow: 0px 3px 6px rgba(0, 0, 0, .15);
+        box-shadow: $shadow-div;
         display: flex;
         justify-content: center;
-        font-family: "Montserrat", sans-serif;
+        font-family: $main-font;
         margin: 50px  auto;
         width: 600px;
 
@@ -307,7 +310,7 @@ body {
             display: flex;
             align-items: center;
             flex-direction: column;
-            background-color: rgba(255, 255, 255, .4);
+            background-color: $form-bg-color;
             border: none;
             border-radius: 15px;
             font-size: 1.1em;
@@ -315,23 +318,23 @@ body {
             width: 100%;
 
             .add-title {
-                color: #353B48;
-                font-size: 1.8em;
+                color: $text-color;
+                font-size: $form-title-size;
                 font-weight: bold;
                 margin: 35px 0px;
                 text-align: center;
             }
 
             .add-separation-form {
-                color: #353B48;
+                color: $hr-color;
                 margin-bottom: 35px;
                 width: 50%;
             }
 
             i {
                 background-color: white;
-                border-radius: 5px 0px 0px 5px;
-                color: #353B48;
+                border-radius: $input-radius 0px 0px $input-radius;
+                color: $icon-color;
                 font-size: 1.6em;
                 line-height: 45px;
                 padding: 0px 15px;
@@ -346,21 +349,21 @@ body {
             input[type="text"],
             textarea {
                 border: none;
-                border-radius: 5px;
-                box-shadow: 0px 3px 6px rgba(0, 0, 0, .15);
-                font-family: "Montserrat", sans-serif;
+                border-radius: $input-radius;
+                box-shadow: $shadow-input;
+                font-family: $main-font;
                 font-size: 1.05em;
-                height: 45px;
+                height: $input-height;
                 margin-bottom: 20px;
+                outline: none;
                 padding: 0px 15px;
                 resize: none;
                 text-indent: 45px;
-                width: 450px;
-                outline: none;
+                width: $input-width;
 
                 &::placeholder {
-                    color: rgba(112, 112, 122, .5);
-                    font-family: "Montserrat", sans-serif;
+                    color: $placeholder-color;
+                    font-family: $main-font;
                     font-size: 1.1em;
                     letter-spacing: 2px;
                 }
@@ -373,19 +376,19 @@ body {
             }
 
             button[type="submit"] {
-                background-color: #84fab0;
+                background-color: $btn-bg-color;
                 border: none;
-                border-radius: 5px;
-                box-shadow: 0px 3px 6px rgba(0, 0, 0, .15);
-                color: #353B48;
+                border-radius: $btn-radius;
+                box-shadow: $shadow-btn;
+                color: $text-color;
                 cursor: pointer;
-                font-family: "Montserrat", sans-serif;
+                font-family: $main-font;
                 font-size: 1em;
                 font-weight: bold;
-                height: 40px;
-                letter-spacing: 2px;
+                height: $btn-height;
+                letter-spacing: 1.5px;
                 margin-bottom: 25px;
-                width: 180px;
+                width: $btn-width;
             }
         }
     }
