--- a/Site Web/styles/main.scss
+++ b/Site Web/styles/main.scss
@@ -151,7 +151,7 @@ body {
         }
     }
 
-    .list-cards {
+    #list-cards {
         align-items: center;
         display: flex;
         flex-direction: column;
