--- a/APP/app/src/main/res/layout/activity_list.xml
+++ b/APP/app/src/main/res/layout/activity_list.xml
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_margin="25dp"
+        android:elevation="3dp"
         />
 
     <android.support.v7.widget.RecyclerView
