--- a/APP/app/src/main/res/layout/list_row_item.xml
+++ b/APP/app/src/main/res/layout/list_row_item.xml
@@ -9,6 +9,7 @@
     android:id="@+id/container">
 
     <LinearLayout
+        android:id="@+id/provider_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -17,7 +18,7 @@
         android:background="@drawable/rounded_edge">
 
         <TextView
-            android:id="@+id/nom_fournisseur"
+            android:id="@+id/provider_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nom"
@@ -25,7 +26,7 @@
             android:textSize="23sp"/>
 
         <TextView
-            android:id="@+id/email_fournisseur"
+            android:id="@+id/provider_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="adresse@mail.fr"
@@ -33,21 +34,21 @@
             android:layout_marginTop="4dp"/>
 
         <TextView
-            android:id="@+id/telephone_fournisseur"
+            android:id="@+id/provider_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="01 02 03 04 05"
             android:textSize="18sp"/>
 
         <TextView
-            android:id="@+id/adresse_fournisseur"
+            android:id="@+id/provider_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Adresse"
             android:textSize="16sp"/>
 
         <TextView
-            android:id="@+id/description_fournisseur"
+            android:id="@+id/provider_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Description "
