--- a/Site Web/styles/main.scss
+++ b/Site Web/styles/main.scss
@@ -93,7 +93,7 @@ body {
                 position: absolute;
             }
 
-            input[type="email"],
+            input[type="text"],
             input[type="password"] {
                 border: none;
                 border-radius: $input-radius;
