Adding POST method, missing reddirection

--- a/Site Web/styles/main.scss
+++ b/Site Web/styles/main.scss
@@ -365,6 +365,7 @@ body {
 
             input[type="email"],
             input[type="text"],
+            input[type="number"],
             textarea {
                 border: none;
                 border-radius: $input-radius;
