--- a/Site Web/styles/main.css
+++ b/Site Web/styles/main.css
@@ -525,9 +525,11 @@ body .add-div-connexion .add-form i.comment {
 
 html .add-div-connexion .add-form input[type="email"],
 html .add-div-connexion .add-form input[type="text"],
+html .add-div-connexion .add-form input[type="number"],
 html .add-div-connexion .add-form textarea,
 body .add-div-connexion .add-form input[type="email"],
 body .add-div-connexion .add-form input[type="text"],
+body .add-div-connexion .add-form input[type="number"],
 body .add-div-connexion .add-form textarea {
   border: none;
   border-radius: 7px;
@@ -546,9 +548,11 @@ body .add-div-connexion .add-form textarea {
 
 html .add-div-connexion .add-form input[type="email"]::-webkit-input-placeholder,
 html .add-div-connexion .add-form input[type="text"]::-webkit-input-placeholder,
+html .add-div-connexion .add-form input[type="number"]::-webkit-input-placeholder,
 html .add-div-connexion .add-form textarea::-webkit-input-placeholder,
 body .add-div-connexion .add-form input[type="email"]::-webkit-input-placeholder,
 body .add-div-connexion .add-form input[type="text"]::-webkit-input-placeholder,
+body .add-div-connexion .add-form input[type="number"]::-webkit-input-placeholder,
 body .add-div-connexion .add-form textarea::-webkit-input-placeholder {
   color: rgba(112, 112, 122, 0.5);
   font-family: "Montserrat", sans-serif;
@@ -558,9 +562,11 @@ body .add-div-connexion .add-form textarea::-webkit-input-placeholder {
 
 html .add-div-connexion .add-form input[type="email"]:-ms-input-placeholder,
 html .add-div-connexion .add-form input[type="text"]:-ms-input-placeholder,
+html .add-div-connexion .add-form input[type="number"]:-ms-input-placeholder,
 html .add-div-connexion .add-form textarea:-ms-input-placeholder,
 body .add-div-connexion .add-form input[type="email"]:-ms-input-placeholder,
 body .add-div-connexion .add-form input[type="text"]:-ms-input-placeholder,
+body .add-div-connexion .add-form input[type="number"]:-ms-input-placeholder,
 body .add-div-connexion .add-form textarea:-ms-input-placeholder {
   color: rgba(112, 112, 122, 0.5);
   font-family: "Montserrat", sans-serif;
@@ -570,9 +576,11 @@ body .add-div-connexion .add-form textarea:-ms-input-placeholder {
 
 html .add-div-connexion .add-form input[type="email"]::-ms-input-placeholder,
 html .add-div-connexion .add-form input[type="text"]::-ms-input-placeholder,
+html .add-div-connexion .add-form input[type="number"]::-ms-input-placeholder,
 html .add-div-connexion .add-form textarea::-ms-input-placeholder,
 body .add-div-connexion .add-form input[type="email"]::-ms-input-placeholder,
 body .add-div-connexion .add-form input[type="text"]::-ms-input-placeholder,
+body .add-div-connexion .add-form input[type="number"]::-ms-input-placeholder,
 body .add-div-connexion .add-form textarea::-ms-input-placeholder {
   color: rgba(112, 112, 122, 0.5);
   font-family: "Montserrat", sans-serif;
@@ -582,9 +590,11 @@ body .add-div-connexion .add-form textarea::-ms-input-placeholder {
 
 html .add-div-connexion .add-form input[type="email"]::placeholder,
 html .add-div-connexion .add-form input[type="text"]::placeholder,
+html .add-div-connexion .add-form input[type="number"]::placeholder,
 html .add-div-connexion .add-form textarea::placeholder,
 body .add-div-connexion .add-form input[type="email"]::placeholder,
 body .add-div-connexion .add-form input[type="text"]::placeholder,
+body .add-div-connexion .add-form input[type="number"]::placeholder,
 body .add-div-connexion .add-form textarea::placeholder {
   color: rgba(112, 112, 122, 0.5);
   font-family: "Montserrat", sans-serif;
