--- a/APP/app/src/main/res/layout/list_row_item.xml
+++ b/APP/app/src/main/res/layout/list_row_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="250dp"
@@ -17,42 +17,80 @@
         android:padding="10dp"
         android:background="@drawable/rounded_edge">
 
-        <TextView
-            android:id="@+id/provider_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nom"
-            android:textStyle="bold"
-            android:textSize="23sp"/>
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/provider_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="adresse@mail.fr"
-            android:textSize="18sp"
-            android:layout_marginTop="4dp"/>
 
-        <TextView
-            android:id="@+id/provider_phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="01 02 03 04 05"
-            android:textSize="18sp"/>
+            <TextView
+                android:id="@+id/provider_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nom"
+                android:textStyle="bold"
+                android:textSize="23sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
 
-        <TextView
-            android:id="@+id/provider_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Adresse"
-            android:textSize="16sp"/>
+            <TextView
+                android:id="@+id/provider_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="adresse@mail.fr"
+                android:textSize="18sp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@id/provider_name"
+                app:layout_constraintLeft_toLeftOf="parent"/>
 
-        <TextView
-            android:id="@+id/provider_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Description "
-            android:textSize="16sp"/>
+            <TextView
+                android:id="@+id/provider_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="01 02 03 04 05"
+                android:textSize="18sp"
+                app:layout_constraintTop_toBottomOf="@id/provider_email"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+            <TextView
+                android:id="@+id/provider_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Adresse"
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@id/provider_phone"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+            <TextView
+                android:id="@+id/provider_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description "
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@id/provider_address"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:src="@drawable/edit_icon"
+                android:tint="#000000"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/provider_description"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:src="@drawable/delete_icon"
+                android:tint="#e74c3c"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/provider_description"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
 
